<resources>
    <string name="app_name">Tv Series</string>

    <string name="menu_1">Home</string>
    <string name="menu_2">Search</string>
    <string name="menu_3">People</string>

    <string name="header_list_series">Home</string>
    <string name="header_search">Search</string>
    <string name="header_information">Tv Series Information</string>
    <string name="header_episodes">Episodes</string>
    <string name="header_episode">Episode</string>
    <string name="header_people">People</string>
    <string name="header_person">Person Information</string>

    <string name="fragment_search_type">Type the TV series\' name</string>
    <string name="fragment_search_not_found">No TV series found.</string>
    <string name="fragment_search_instruction">Search for TV series.</string>

    <string name="fragment_tv_series_information_date">Schedule:</string>
    <string name="fragment_tv_series_information_runtime">Runtime:</string>
    <string name="fragment_tv_series_information_genres">Genres:</string>
    <string name="fragment_tv_series_information_summary">Summary:</string>
    <string name="fragment_tv_series_information_episodes">Episodes:</string>
    <string name="fragment_tv_series_information_close">Close</string>
    <string name="fragment_tv_series_information_bt_see_episode">See Episodes</string>

    <string name="fragment_episode_not_found">No episodes found!</string>

    <string name="fragment_episode_summary">Summary:</string>
    <string name="fragment_episode_number">Number:</string>
    <string name="fragment_episode_season">Season:</string>

    <string name="fragment_people_instruction">Search for People.</string>
    <string name="fragment_people_not_found">None found.</string>
    <string name="fragment_people_type">Type a person name</string>

    <string name="fragment_person_cast">TV series:</string>
    <string name="fragment_person_cast_not_found">No tv series found for this person.</string>
</resources>