<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tvseries.view.TvSeriesListFragment"
        android:label="@string/header_list_series">
        <action
            android:id="@+id/action_navigation_home_to_tvSeriesFragment"
            app:destination="@id/tvSeriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.tvseries.view.TvSeriesSearchFragment"
        android:label="@string/header_search">
        <action
            android:id="@+id/action_navigation_search_to_tvSeriesFragment"
            app:destination="@id/tvSeriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/tvSeriesFragment"
        android:name="com.tvseries.view.TvSeriesFragment"
        android:label="@string/header_information">
        <action
            android:id="@+id/action_tvSeriesFragment_to_episodeFragment"
            app:destination="@id/episodeFragment" />
    </fragment>
    <fragment
        android:id="@+id/episodeFragment"
        android:name="com.tvseries.view.EpisodeListFragment"
        android:label="@string/header_episodes" />
</navigation>